# my-py-project-template

./: README.md  pyproject.toml  pyrightconfig.json
.devcontainer/: README.md  devcontainer.json
.github/: copilot-commit-message-instructions.md  copilot-instructions.md
src/: main.py
test/: test_main.py
